objects/Tech_Sales_Int_Approval_Rule_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Criteria_Field__c</fullName>
        <label>Criteria Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Margin Percentage</fullName>
                </value>
                <value>
                    <fullName>Margin Amount</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Issue Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Greater Than</fullName>
                </value>
                <value>
                    <fullName>Greater Than Or Equal To</fullName>
                </value>
                <value>
                    <fullName>Less Than</fullName>
                </value>
                <value>
                    <fullName>Less Than Or Equal To</fullName>
                </value>
                <value>
                    <fullName>Equal To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Sales_Internal_Approval_Rule_Header__c</fullName>
        <label>Tech Sales Internal Approval Rule Header</label>
        <referenceTo>Tech_Sales_Internal_Approval_Rule_Header__c</referenceTo>
        <relationshipLabel>Tech Sales Int Approval Rules Criteria</relationshipLabel>
        <relationshipName>Tech_Sales_Int_Approval_Rules_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Text_Value__c</fullName>
        <description>If you need to use string to match use this value field</description>
        <inlineHelpText>If you need to use string to match use this value field</inlineHelpText>
        <label>Text Value</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Tech Sales Int Approval Rule Criteria</label>
    <nameField>
        <label>Tech Sales Int Approval Rule Criteria Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tech Sales Int Approval Rules Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>